setup prebuilt docker with ldk-node

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
-
 services:
   mintd:
     image: cashubtc/mintd:latest
+    platform: linux/amd64
     container_name: mandel-mintd
     ports:
       - "3338:3338"  # Default mintd port
@@ -11,7 +10,7 @@ services:
       - MINT_DB_PATH=${MINT_DB_PATH:-/data/mint.db}
       - MINT_HOST=${MINT_HOST:-0.0.0.0}
       - MINT_PORT=${MINT_PORT:-3338}
-      - MINT_LIGHTNING_BACKEND=${MINT_LIGHTNING_BACKEND:-fake}
+      - MINT_LIGHTNING_BACKEND=fake
       - MINT_LIGHTNING_URL=${MINT_LIGHTNING_URL:-}
       - MINT_LIGHTNING_TOKEN=${MINT_LIGHTNING_TOKEN:-}
     volumes:
