--- a/backend/env.example
+++ b/backend/env.example
@@ -1,23 +1,11 @@
-# Cashu Mint Configuration
+# Cashu Mint Configuration with LDK Node Backend
 # Copy this file to .env and update the values as needed
 
-# Mint private key (generate with: python -c "import secrets; print(secrets.token_hex(32))")
+# Mint private key (auto-generated if not provided)
 MINT_PRIVATE_KEY=
 
-# Database path (inside container)
-MINT_DB_PATH=/data/mint.db
+# Mint mnemonic (auto-generated if not provided)
+MINT_MNEMONIC=abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon about
 
-# Host and port configuration
-MINT_HOST=0.0.0.0
-MINT_PORT=3338
-
-# Lightning backend configuration
-# Options: fake, lnd, clightning, eclair
-MINT_LIGHTNING_BACKEND=fake
-
-# Lightning node configuration (if using real Lightning backend)
-MINT_LIGHTNING_URL=
-MINT_LIGHTNING_TOKEN=
-
-# Additional configuration
-MINT_LOG_LEVEL=INFO
+# Note: The mint server uses CDK mintd with LDK Node backend
+# All other configuration is handled automatically via Docker Compose
