--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     platform: linux/amd64
     container_name: mandel-mintd
     ports:
-      - "3338:3338"
+      - "3338:3338"  # Mint API
+      - "8091:8091"  # LDK Node management interface
     environment:
       - CDK_MINTD_URL=http://localhost:3338
       - CDK_MINTD_LN_BACKEND=ldk-node
@@ -17,6 +18,8 @@ services:
       - CDK_MINTD_LDK_NODE_ESPLORA_URL=https://mutinynet.com/api
       - CDK_MINTD_LDK_NODE_RGS_URL=https://rgs.mutinynet.com/snapshot/0
       - CDK_MINTD_LDK_NODE_LISTENING_ADDRESSES=0.0.0.0:9735
+      - CDK_MINTD_LDK_NODE_WEBSERVER_HOST=0.0.0.0
+      - CDK_MINTD_LDK_NODE_WEBSERVER_PORT=8091
     volumes:
       - mint_data:/usr/src/app/ldk_node_data
     command: ["cdk-mintd"]
