--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - CDK_MINTD_LDK_NODE_NETWORK=signet
       - CDK_MINTD_LDK_NODE_ESPLORA_URL=https://mutinynet.com/api
       - CDK_MINTD_LDK_NODE_RGS_URL=https://rgs.mutinynet.com/snapshot/0
+      - CDK_MINTD_LDK_NODE_BITCOIN_NETWORK=signet
       - CDK_MINTD_LDK_NODE_LISTENING_ADDRESSES=0.0.0.0:9735
       - CDK_MINTD_LDK_NODE_WEBSERVER_HOST=0.0.0.0
       - CDK_MINTD_LDK_NODE_WEBSERVER_PORT=8091
