--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,55 @@
 services:
   - type: web
+    name: mandel-keycloak
+    env: docker
+    dockerfilePath: ./keycloak-backend/Dockerfile
+    dockerContext: ./keycloak-backend
+    plan: starter
+    region: oregon
+    envVars:
+      - key: KC_HOSTNAME
+        generateValue: true
+      - key: KC_HOSTNAME_PORT
+        value: "443"
+      - key: KC_HOSTNAME_STRICT_BACKCHANNEL
+        value: "false"
+      - key: KC_HTTP_ENABLED
+        value: "false"
+      - key: KC_HOSTNAME_STRICT_HTTPS
+        value: "true"
+      - key: KC_HEALTH_ENABLED
+        value: "true"
+      - key: KEYCLOAK_ADMIN
+        value: admin
+      - key: KEYCLOAK_ADMIN_PASSWORD
+        value: admin
+      - key: KC_DB
+        value: postgres
+      - key: KC_DB_URL
+        value: jdbc:postgresql://postgres:5432/cashu
+      - key: KC_DB_USERNAME
+        value: cashu
+      - key: KC_DB_PASSWORD
+        value: cashu
+    healthCheckPath: /health
+    dockerCommand: start --import-realm
+
+  - type: pserv
+    name: mandel-postgres
+    plan: starter
+    region: oregon
+    envVars:
+      - key: POSTGRES_DB
+        value: cashu
+      - key: POSTGRES_USER
+        value: cashu
+      - key: POSTGRES_PASSWORD
+        value: cashu
+
+  - type: web
     name: mandel-mint
     env: docker
-    dockerfilePath: ./backend/Dockerfile
+    dockerfilePath: ./Dockerfile
     dockerContext: .
     plan: starter
     region: oregon
@@ -35,3 +82,15 @@ services:
         value: 0.0.0.0
       - key: CDK_MINTD_LDK_NODE_WEBSERVER_PORT
         value: 8091
+      - key: CDK_MINTD_AUTH_OPENID_DISCOVERY
+        value: https://mandel-keycloak.onrender.com/realms/cdk-test-realm/.well-known/openid-configuration
+      - key: CDK_MINTD_AUTH_OPENID_CLIENT_ID
+        value: cashu-client
+      - key: CDK_MINTD_AUTH_MINT_MAX_BAT
+        value: "50"
+      - key: CDK_MINTD_AUTH_ENABLED
+        value: "true"
+      - key: CDK_MINTD_AUTH_MINT
+        value: "blind"
+      - key: CDK_MINTD_AUTH_GET_MINT_QUOTE
+        value: "blind"
